[package]
name = "ckb-merkle-mountain-range"
version = "0.6.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"
description = "A generalized merkle mountain range implementation"
repository = "https://github.com/nervosnetwork/merkle-mountain-range"

[features]
default = ["std"]
std = []

[dependencies]
cfg-if = "1.0"

[dev-dependencies]
faster-hex = "0.8.0"
criterion = "0.5.1"
rand = "0.8.5"
proptest = "1.2.0"
lazy_static = "1.4.0"
bytes = "1.4.0"
blake2b-rs = "0.2.0"

[[bench]]
name = "mmr_benchmark"
harness = false

[[bench]]
name = "helper_benchmark"
harness = false
